# alexandria

./: .gitignore  CLAUDE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MIGRATION_PLAN.md  MIGRATION_STATUS_REPORT.md  PLAN.md  README.md  SECURITY.md  claude.md  docker-compose.yml
.github/workflows/: lint.yml  test-e2e.yml  test-unit.yml
backend/: .env.ci  .env.example  .env.production.example  Dockerfile  REFACTOR_PLAN.md  pixi.toml  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_rename_metadata_column.py  003_add_word_count.py  004_add_embeddings.py  005_change_embedding_dimension.py  006_add_is_read.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  base.py  embeddings.py  factory.py  llm.py  prompts.py  query_router.py  service.py
backend/app/ai/providers/: __init__.py  anthropic.py  google.py  openai.py
backend/app/api/: __init__.py  htmx.py
backend/app/api/htmx/: __init__.py  articles.py  ask.py  bulk.py  general.py  ingestion.py  main.py  reader.py  remote.py  settings.py  taxonomy.py  utils.py
backend/app/api/htmx/helpers/: __init__.py  converters.py  data_fetchers.py
backend/app/api/routes/: articles.py  auth.py  categories.py  health.py  library.py  notes.py  settings.py  tags.py
backend/app/core/: __init__.py  constants.py
backend/app/db/: __init__.py  queries.py  raw.py
backend/app/extractors/: __init__.py  arxiv.py  base.py  constants.py  lesswrong.py  pdf.py  substack.py  url.py  youtube.py
backend/app/models/: __init__.py  ai_provider.py  article.py  article_category.py  article_tag.py  category.py  color.py  note.py  reorganization_suggestion.py  tag.py  user.py
backend/app/schemas/: __init__.py  ai_provider.py  article.py  category.py  tag.py  user.py
backend/app/services/: article_service.py
backend/app/tasks/: __init__.py  article_processing.py
backend/app/utils/: article_helpers.py  auth.py  encryption.py
backend/scripts/: backfill_embeddings.py
backend/templates/: CARD_ANALYSIS.md  base.html
backend/templates/components/: badge.html  icons.html  modal.html  toast.html
backend/templates/modals/: add_article.html  add_provider.html
backend/templates/pages/: article.html  ask.html  index.html  not_found.html  reader.html  reader_empty.html  remote.html  settings.html  test.html  test_cards.html
backend/templates/partials/: article_card.html  article_cards_only.html  article_categories_section.html  article_color_section.html  article_list.html  article_notes_section.html  article_read_status_section.html  article_tags_section.html  bulk_color_picker.html  chat_message_assistant.html  chat_message_user.html  processing_status_banner.html  settings_backup.html  settings_color_item.html  settings_colors.html  settings_colors_list.html  settings_prompts.html  settings_providers.html  settings_providers_list.html  sidebar.html  sidebar_colors.html  sidebar_unread_count.html  taxonomy_optimize_modal.html
backend/tests/: conftest.py  test_ai.py  test_ai_embeddings.py  test_ai_factory.py  test_ai_llm.py  test_ai_providers.py  test_ai_query_router.py  test_ai_service.py  test_db_raw.py  test_extractors.py  test_extractors_init.py  test_extractors_lesswrong.py  test_extractors_pdf.py  test_extractors_substack.py  test_extractors_url.py  test_extractors_youtube.py  test_models.py  test_queries.py  test_utils_auth.py
backend/tests/api/: __init__.py  conftest.py  test_articles.py  test_categories.py  test_health.py  test_library.py  test_notes.py  test_settings.py  test_tags.py
backend/tests/e2e/: __init__.py  conftest.py  test_article_filtering.py  test_article_workflow.py  test_ask_chat.py  test_bulk_operations.py  test_reader_mode.py  test_settings.py  test_taxonomy.py
frontend/: .env.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: Alexandria.bat.example  backup.sh  backup_local.sh  restore.sh
whatsapp-bot/: bot.js  package-lock.json  package.json
(+38 files in other folders)
