[project]
name = "alexandria"
version = "2.0.0"
description = "Personal Research Library"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database - SQLAlchemy (keeping for ORM)
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.2.0",  # Pin to version compatible with passlib 1.7.4

    # Content extraction
    "newspaper3k>=0.2.8",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "PyMuPDF>=1.23.0",
    "arxiv>=2.1.0",
    "yt-dlp>=2024.1.0",

    # HTTP client
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # Local embeddings (KEEP - used for semantic search)
    "sentence-transformers>=3.0.0",

    # Storage (S3-compatible)
    "boto3>=1.34.0",

    # Encryption
    "cryptography>=42.0.0",

    # Utilities
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # NEW: psycopg3 for parameterized queries
    "psycopg[binary,pool]>=3.1.0",

    # NEW: LiteLLM for unified AI provider interface
    "litellm>=1.0.0",

    # AI provider SDKs (used by individual providers)
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",

    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",

    # Linting
    "ruff>=0.5.0",

    # HTMX Frontend
    "jinja2>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (needed for tests)
    "S104",   # bind to all interfaces (needed for Docker)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"alembic/*" = ["E501"]
